# vortex-auv-simulator

./: .gitignore  Dockerfile  LICENSE  README.md  comb_launch_fsm.sh  comb_launch_fsm2.sh  docker-compose.yml  entrypoint.sh  sim_launch_basic.sh  sim_launch_fsm.sh  sim_launch_fsm2.sh
beluga_description/: CMakeLists.txt  package.xml
beluga_description/launch/: upload_beluga.launch
beluga_description/robots/: beluga_default.xacro
beluga_description/scripts/: spawn_model
beluga_description/urdf/: beluga_base.xacro  manta_gazebo.xacro  manta_sensors.xacro
gladlaks_description/: CMakeLists.txt  package.xml
gladlaks_description/launch/: upload_gladlaks.launch
gladlaks_description/robots/: gladlaks_default.xacro
gladlaks_description/urdf/: gladlaks_actuators.xacro  gladlaks_base.xacro  manta_gazebo.xacro
launch_scripts_bash/: comb_launch_fsm.sh  comb_launch_fsm2.sh  sim_launch_basic.sh  sim_launch_fsm.sh
manta_control/manta_thruster_manager/launch/: thruster_manager.launch
manta_control/manta_thruster_manager/scripts/: thruster_allocator.py
manta_description/launch/: upload_manta.launch  upload_manta_cyb_pool.launch
manta_description/mesh/: manipulator_claw.dae
manta_description/robots/: manta_default.xacro
manta_description/urdf/: manta_base.xacro  manta_gazebo.xacro  manta_sensors.xacro
pkg/simulator_launch/: CMakeLists.txt  package.xml
pkg/simulator_launch/launch/: basin_sim.launch  combined_launch.launch  cybernetics_sim.launch  robosub2019_sim.launch  robosub2022_sim.launch
pkg/simulator_launch/launch_scripts_bash/: sim_launch_fsm2.sh
pkg/thrust_allocation/: CMakeLists.txt  package.xml
pkg/thrust_allocation/launch/: thruster_manager.launch
pkg/thrust_allocation/scripts/: thruster_allocator.py
robots/beluga_description/launch/: upload_beluga.launch
robots/beluga_description/scripts/: spawn_model
robots/beluga_description/urdf/: beluga_actuators.xacro  beluga_base.xacro  beluga_sensors.xacro
simulator_launch/: CMakeLists.txt
simulator_launch/launch/: autonomy.launch  auv_models.launch  basin.launch  basin_sim.launch  combined_launch.launch  cybernetics_pool.launch  cybernetics_sim.launch  quick_reset.launch  robosub.launch  robosub_sim.launch  vortex_pool.launch  vortex_sim.launch
simulator_launch/launch_scripts_bash/: comb_launch_fsm.sh
simulator_thruster_manager/: CMakeLists.txt  package.xml  setup.py
simulator_thruster_manager/launch/: thruster_manager.launch
simulator_thruster_manager/scripts/: thruster_allocator.py
uuv_assistants/scripts/: publish_footprints.py  publish_vehicle_footprint.py  publish_world_models.py  set_simulation_timer.py  unpause_simulation.py
uuv_descriptions/launch/: cybernetics_pool.launch  vortex_pool.launch
uuv_descriptions/scripts/: spawn_model
uuv_descriptions/worlds/: Vortex_pool.world  cybernetics_pool.world
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/: CMakeLists.txt
uuv_simulator/uuv_descriptions/: CMakeLists.txt  package.xml
uuv_world_plugins/uuv_world_ros_plugins/: CMakeLists.txt
vortex_uuv_descriptions/: CMakeLists.txt  package.xml
vortex_uuv_descriptions/models/basin_pool/: basin_pool.dae
vortex_uuv_descriptions/world_models/2018/gate/: gate_casino.sdf
vortex_uuv_descriptions/world_models/vortex_pool/: Vortex_Pool.STL
vortex_uuv_descriptions/worlds/: basin_pool.world  cybernetics_pool.world
(+107 files in other folders)
