<?xml version="1.0"?>
<package format="2">
  <name>simulator_launch</name>
  <version>0.0.0</version>
  <description>The simulator_launch package</description>

  <maintainer email="petter@todo.todo">petter</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
